# nl-ai-review-engine

./: .gitignore  .vercelignore  README.md  architecture.md  railway.toml  render.yaml  vercel.json
.github/workflows/: ci.yml  pipeline_refresh.yml
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  railway.toml  requirements.txt  run_server.py  start.sh
backend/app/: config.py
backend/app/api/: routes.py
backend/app/db/: __init__.py  models.py
backend/app/pipeline/: embed_cluster.py  ingest.py  label.py  orchestrator.py  quantify.py
backend/app/rag/: chat.py  citations.py  prompts.py  retriever.py  router.py
backend/config/: source_config.yaml
backend/scripts/: run_eval.py  run_pipeline_refresh.py  test_sheet_connection.py
frontend/: .env.example  Dockerfile  index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  vite-env.d.ts
frontend/src/components/: ChatPanel.tsx  DonutChart.tsx  FilterPanel.tsx  Header.tsx  PatternDashboard.tsx  RatingStars.tsx  ReviewCard.tsx  ReviewList.tsx  StatsBar.tsx
frontend/src/lib/: api.ts  chatFormat.ts  filters.ts  sheets.ts
frontend/src/styles/: design-system.css
frontend/src/types/: api.ts  review.ts
