[project]
name = "review-engine-api"
version = "1.0.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn>=0.32.0",
  "sqlalchemy>=2.0.36",
  "pyyaml>=6.0.2",
  "httpx>=0.28.0",
  "python-dotenv>=1.0.1",
  "langdetect>=1.0.9",
  "groq>=0.13.0",
  "pydantic>=2.10.0",
  "pydantic-settings>=2.6.0",
]

[tool.vercel]
entrypoint = "app.main:app"
